--- a/our-model.html
+++ b/our-model.html
@@ -49,7 +49,7 @@
     </div>
     <div class="about-us">
         <div class="container ab">
-            <a href="../landingpage-cmp/about-us.html"></a>
+            <a href="about-us.html"></a>
             <div class="ab-us">
                 ABOUT-US
             </div>
@@ -57,7 +57,7 @@
         </div>
     </div>
     <div class="groundended">
-        <img src="../landingpage-cmp/image/grounded.png" alt="">
+        <img src="/image/grounded.png" alt="">
     </div>
     <div class="textOurModel">
         <div class="titleOurModel">
@@ -97,9 +97,9 @@
         <div class="container">
             <div class="abc">
                 <div class="col-xs-6 col-sm-12 col-md-6 ccc">
-                    <a href="../landingpage-cmp/item-leaderShip1.html">
+                    <a href="item-leaderShip1.html">
                         <div class="image">
-                            <img src="../landingpage-cmp/image/image1.svg" alt="">
+                            <img src="image/image1.svg" alt="">
                         </div>
                         <div>
                             Wordington Leadership Certificate Programme
@@ -107,9 +107,9 @@
                     </a>
                 </div>
                 <div class="col-xs-6 col-sm-12 col-md-6 ccc">
-                    <a href="../landingpage-cmp/item-leaderShip2.html">
+                    <a href="item-leaderShip2.html">
                         <div class="image">
-                            <img src="../landingpage-cmp/image/image2.svg" alt="">
+                            <img src="image/image2.svg" alt="">
                         </div>
                         <div>
                             Wordington Diploma in Leadership Programme
@@ -117,9 +117,9 @@
                     </a>
                 </div>
                 <div class="col-xs-6 col-sm-12 col-md-6 ccc">
-                    <a href="../landingpage-cmp/item-leaderShip3.html">
+                    <a href="item-leaderShip3.html">
                         <div class="image">
-                            <img src="../landingpage-cmp/image/image3.svg" alt="">
+                            <img src="image/image3.svg" alt="">
                         </div>
                         <div>
                             Wordington Master of Leadership Programme
@@ -127,9 +127,9 @@
                     </a>
                 </div>
                 <div class="col-xs-6 col-sm-12 col-md-6 ccc">
-                    <a href="../landingpage-cmp/item-leaderShip4.html">
+                    <a href="item-leaderShip4.html">
                         <div class="image">
-                            <img src="../landingpage-cmp/image/image4.svg" alt="">
+                            <img src="image/image4.svg" alt="">
                         </div>
                         <div>
                             Wordington Doctorate Programme in Leadership
@@ -151,9 +151,9 @@
         <div class="container">
             <div class="abc">
                 <div class="col-xs-6 col-sm-12 col-md-6 ccc">
-                    <a href="../landingpage-cmp/item-management1.html">
+                    <a href="item-management1.html">
                         <div class="image">
-                            <img src="../landingpage-cmp/image/image5.svg" alt="">
+                            <img src="image/image5.svg" alt="">
                         </div>
                         <div>
                             Wordington Certificate Programme in Human
@@ -162,9 +162,9 @@
                     </a>
                 </div>
                 <div class="col-xs-6 col-sm-12 col-md-6 ccc">
-                    <a href="../landingpage-cmp/item-management2.html">
+                    <a href="item-management2.html">
                         <div class="image">
-                            <img src="../landingpage-cmp/image/image6.svg" alt="">
+                            <img src="image/image6.svg" alt="">
                         </div>
                         <div>
                             Wordington Diploma in Human
@@ -173,9 +173,9 @@
                     </a>
                 </div>
                 <div class="col-xs-6 col-sm-12 col-md-6 ccc">
-                    <a href="../landingpage-cmp/item-management3.html">
+                    <a href="item-management3.html">
                         <div class="image">
-                            <img src="../landingpage-cmp/image/image7.svg" alt="">
+                            <img src="image/image7.svg" alt="">
                         </div>
                         <div>
                             Wordington Master of Human Resource
@@ -185,9 +185,9 @@
 
                 </div>
                 <div class="col-xs-6 col-sm-12 col-md-6 ccc">
-                    <a href="../landingpage-cmp/item-management4.html">
+                    <a href="item-management4.html">
                         <div class="image">
-                            <img src="../landingpage-cmp/image/image8.svg" alt="">
+                            <img src="image/image8.svg" alt="">
                         </div>
                         <div>
                             Wordington Doctorate Programme in Human
@@ -210,9 +210,9 @@
         <div class="container">
             <div class="abc">
                 <div class="col-xs-6 col-sm-12 col-md-6 ccc">
-                    <a href="../landingpage-cmp/item-biblical1.html">
+                    <a href="item-biblical1.html">
                         <div class="image">
-                            <img src="../landingpage-cmp/image/image9.svg" alt="">
+                            <img src="image/image9.svg" alt="">
                         </div>
                         <div>
                             Wordington Certificate Programme
@@ -221,9 +221,9 @@
                     </a>
                 </div>
                 <div class="col-xs-6 col-sm-12 col-md-6 ccc">
-                    <a href="../landingpage-cmp/item-biblical2.html">
+                    <a href="item-biblical2.html">
                         <div class="image">
-                            <img src="../landingpage-cmp/image/image10.svg" alt="">
+                            <img src="image/image10.svg" alt="">
                         </div>
                         <div>
                             Wordington Diploma in Biblical Leadership
@@ -231,9 +231,9 @@
                     </a>
                 </div>
                 <div class="col-xs-6 col-sm-12 col-md-6 ccc">
-                    <a href="../landingpage-cmp/item-biblical3.html">
+                    <a href="item-biblical3.html">
                         <div class="image">
-                            <img src="../landingpage-cmp/image/image11.svg" alt="">
+                            <img src="image/image11.svg" alt="">
                         </div>
                         <div>
                             Wordington Graduate Programme in Biblical
@@ -243,9 +243,9 @@
                     </a>
                 </div>
                 <div class="col-xs-6 col-sm-12 col-md-6 ccc">
-                    <a href="../landingpage-cmp/item-biblical4.html">
+                    <a href="item-biblical4.html">
                         <div class="image">
-                            <img src="../landingpage-cmp/image/image12.svg" alt="">
+                            <img src="image/image12.svg" alt="">
                         </div>
                         <div>
                             Wordington Doctorate Programme in
@@ -265,9 +265,9 @@
     <div class="vvvv">
         <div class="container">
             <div class="col-xs-12 col-sm-12 col-md-8 zxc">
-                <a href="../landingpage-cmp/item-health.html">
+                <a href="item-health.html">
                     <div class="nnnn">
-                        <img src="../landingpage-cmp/image/cccccc.svg" alt="">
+                        <img src="image/cccccc.svg" alt="">
                     </div>
                     <div class="mn" style="color: black;">
                         Wordington Certificate Programme in Nursing
@@ -285,9 +285,9 @@
     <div class="vvvv">
         <div class="container">
             <div class="col-xs-12 col-sm-12 col-md-8 zxc">
-                <a href="../landingpage-cmp/item-international.html">
+                <a href="item-international.html">
                     <div class="nnnn">
-                        <img src="../landingpage-cmp/image/zzzz.svg" alt="">
+                        <img src="image/zzzz.svg" alt="">
                     </div>
                     <div class="mn" style="color: black;">
                         Wordington Certificate Programme in International English Writing Skills
@@ -318,13 +318,4 @@
     function closeMenu() {
         show.style.right = "-250px";
     }
-    new WOW().init();
-    $(".txtb input").on("focus", function () {
-        $(this).addClass("focus");
-    });
-
-    $(".txtb input").on("blur", function () {
-        if ($(this).val() == "")
-            $(this).removeClass("focus");
-    });
 </script>
