--- a/about-us.html
+++ b/about-us.html
@@ -21,7 +21,7 @@
                         <i class="fas fa-times" onclick="closeMenu()"></i>
                     </div>
                     <ul>
-                        <li><a href="../landingpage-cmp/our-model.html" style="color: white;">Home</a></li>
+                        <li><a href="../landingpage-cmp/index.html" style="color: white;">Home</a></li>
                         
                     </ul>
                 </div>
