--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
     </div>
     <div class="groundended">
-        <img src="/image/grounded.png" alt="">
+        <img src="image/grounded.png" alt="">
     </div>
     <div class="textOurModel">
         <div class="titleOurModel">
